# kn_demo

./: Dockerfile  README.md  config.py  main.py  pyproject.toml
config/: config.py
core/: audio_model.py  minio_client.py
docker/: .env  docker-compose.yaml  entrypoint.sh
router/: ui.py
ui/: index.html
ui/assets/: index-B5GIQnC5.js  index-BgGaoj0s.css
web/: package-lock.json  package.json  vite.config.js
web/src/: main.js  pollyfills.js
web/src/api/: useRecorder.js
web/src/router/: index.js
web/src/views/: ChatPage.vue
